# cityhall

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  Cargo.toml  DEMO.md  README.md  REPLICATION_DESIGN.md  WAL_ANALYSIS.md  dashboard.html  dashboard.html.orig
src/: cli.rs  compaction.rs  error.rs  http_server.rs  lib.rs  main.rs  memtable.rs  metrics.rs  storage_engine.rs  wal.rs
src/commands/: client.rs  leader.rs  mod.rs  replica.rs  server.rs  server.rs.orig  server_BASE_346944.rs
src/replication/: backoff.rs  health.rs  leader.rs  metrics.rs  mod.rs  protocol.rs  registry.rs  replica.rs  state.rs
src/sstable/: block.rs  bloom.rs  format.rs  mod.rs  reader.rs  writer.rs
tests/: benchmark_latency.rs  error_handling.rs  integration_sync.rs  integration_test.rs  leader_tests.rs  protocol_tests.rs  replication_benchmarks.rs  replication_state.rs  test_metrics_validation.rs  test_wal_cleanup.rs  test_wal_diagnostic.rs  test_wal_verification.rs  wal_replication.rs
