[package]
name = "cityhall"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5"
crc32fast = "1.3"
crossbeam = "0.8"
parking_lot = "0.12"
snap = "1.1"
thiserror = "2.0.17"
probabilistic-collections = "0.7"
bincode = "1.3"
crossbeam-channel = "0.5.15"
fastrand = "2.0"
once_cell = "1.19"
clap = { version = "4.0", features = ["derive", "string"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.23.0"

sysinfo = "0.30"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

once_cell = "1.19"
fastrand = "2.0"
